--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-  @@include('html/head.html', {
-    "title": "Главная"
-  })
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
 <body>
-  @@include('html/header.html', {})
-  <main>
-    <!-- <img src="@img/spider-man.jpg" alt="человек-паук"> -->
-    <span>
-      <!-- <img src="@img/flowers.jpg" alt="цветочки" width="150"> -->
-      <h1>Основной контент</h1>
-    </span>
+  <header class="main-header">
+    <nav class="header-nav">
+      <div class="logo">
+        <a href="" class="logo__link">
+          <div class="logo__img-container">
+            <img src="" alt="Логотип" class="logo__pic">
+            <img src="" alt="CatEnergy" class="logo__title">
+          </div>
+        </a>
+      </div>
+      <ul class="site-nav">
+        <li class="site-nav__item"><a href="#" class="site-nav__link">Главная</a></li>
+        <li class="site-nav__item"><a href="#" class="site-nav__link">Каталог продукции</a></li>
+        <li class="site-nav__item"><a href="#" class="site-nav__link">Подбор программы</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main class="main-layout">
+    <h1 class="visually-hidden">Фитнесс-продукты для кошек и котов</h1>
+    <section class="promo">
+      <div class="container">
+        <h2 class="promo__title">Функциональное питание для котов</h2>
+        <p class="promo__subtitle">Занялся собой? Займись котом!</p>
+        <img src="" alt="" class="promo__picture">
+        <a href="#" class="promo__button button">Подобрать программу</a>
+      </div>
+    </section>
+    <section class="programs container">
+      <h2 class="visually-hidden">Программы питания для ваших питомцев</h2>
+      <ul class="programs__list">
+        <li class="programs__item food-line">
+          <h2 class="food-line__title">Похудение</h2>
+          <p class="food-line__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a href="" class="food-line__link link">каталог slim</a>
+        </li>
+        <li class="programs__item food-line">
+          <h2 class="food-line__title">Набор массы</h2>
+          <p class="food-line__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <a href="" class="food-line__link link">каталог pro</a>
+        </li>
+      </ul>
+    </section>
+    <section class="mechanism container">
+      <h2 class="mechanism__title">Как это работает</h2>
+      <ul class="mechanism__steps">
+        <li class="mechanism__step">Функциональное питание содержит только полезные питательные вещества.</li>
+        <li class="mechanism__step">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</li>
+        <li class="mechanism__step">Замените один-два приема обычной еды на наше функциональное питание.</li>
+        <li class="mechanism__step">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</li>
+      </ul>
+    </section>
+    <section class="example">
+      <h2 class="example__title">Живой пример</h2>
+      <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+      <dl class="example__results.results">
+        <dt>5 кг</dt>
+        <dd>снижение веса</dd>
+        <dt>60 дней</dt>
+        <dd>затрачено времени</dd>
+        <dt class="results_bold">15 000 руб.</dt>
+        <dd class="results_bold">затраты на питание:</dd>
+      </dl>
+    
+      <div class="example__slider">
+        <div class="example__picture">
+          <img src="" alt='Кот "ДО"'  class="example__image example__image_before">
+          <img src="" alt='Кот "ПОСЛЕ"' class="example__image example__image_after">
+        </div>
+        <div class="example__toggle toggle">
+          <span class="toggle__text"></span>
+          <div class="toggle__container">
+            <div class="toggle__back"></div>
+            <div class="toggle__front"></div>
+          </div>
+          <span class="toggle__text"></span>
+        </div>
+      </div>
+    </section>
   </main>
-  @@include('html/footer.html', {})
-  <script src="js/app.min.js"></script>
+  <footer class="main-footer">
+    <div class="container">
+      <p class="main-footer__promo-text">приглашаем 
+        к сотрудничеству дилеров!</p>
+      <address class="main-footer__address">ул. Большая 
+        Конюшенная, д. 19/8
+        Санкт-Петербург</address>
+    </div>
+    <div class="main-footer__map"></div>
+    <div class="container">
+      <div class="main-footer__logo logo">
+        <a href="" class="logo__link"><img src="" alt="" class="logo__title"></a>
+      </div>
+      <ul class="main-footer__socials sosials">
+        <li class="socials__item"><a href="" class="socials__link">В Контакте</a></li>
+        <li class="socials__item"><a href="" class="socials__link">Instagram</a></li>
+        <li class="socials__item"><a href="" class="socials__link">Facebook</a></li>
+        <div class="main-footer developer"><a href="" class="developer__title">HTML Academy</a><a href="" class="developer__logo">
+          <img src="" alt="HTMLAcademy логотип">
+        </a></div>
+      </ul>
+    </div>  
+  </footer>
 </body>
 </html>
