--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,5 +1,5 @@
 <header class="main-header">
-  <nav class="header-nav">
+  <nav class="header-nav container">
     <div class="logo">
       <a href="#" class="logo__link">
         <div class="logo__img-container">
