--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,17 +1,20 @@
-<header class="main-header">
-  <nav class="header-nav container">
-    <div class="logo">
-      <a href="#" class="logo__link">
-        <div class="logo__img-container">
-          <img src="@img/logo-mobile.svg" alt="Логотип" class="logo__pic">
-          <img src="@img/logo-mobile-text.svg" alt="CatEnergy" class="logo__title">
-        </div>
-      </a>
-    </div>
-    <ul class="site-nav">
-      <li class="site-nav__item"><a href="#" class="site-nav__link">Главная</a></li>
-      <li class="site-nav__item"><a href="index.html" class="site-nav__link">Каталог продукции</a></li>
-      <li class="site-nav__item"><a href="index.html" class="site-nav__link">Подбор программы</a></li>
-    </ul>
-  </nav>
+<header class="main-header ">
+  <div class="container">
+    <nav class="header-nav">
+      <div class="logo">
+        <a href="#" class="logo__link">
+          <div class="logo__img-container">
+            <img src="@img/logo-mobile.svg" alt="Логотип" class="logo__pic">
+            <img src="@img/logo-mobile-text.svg" alt="CatEnergy" class="logo__title">
+          </div>
+        </a>
+      </div>
+
+      <ul class="site-nav">
+        <li class="site-nav__item"><a href="#" class="site-nav__link">Главная</a></li>
+        <li class="site-nav__item"><a href="index.html" class="site-nav__link">Каталог продукции</a></li>
+        <li class="site-nav__item"><a href="index.html" class="site-nav__link">Подбор программы</a></li>
+      </ul>
+    </nav>
+  </div>
 </header>
